export const TEST_IDS = {
  AUTH: {
    CONTAINER: 'AUTH_CONTAINER',
    PASSWORD_INPUT: 'PASSWORD_INPUT',
    CONFIRM_BUTTON: 'CONFIRM_BUTTON',
    CONFIRM_SIGN_UP_TEXT: 'CONFIRM_SIGN_UP_TEXT',
    SIGN_UP_TEXT: 'SIGN_UP_TEXT',
    CONFIRMATION_CODE_INPUT: 'CONFIRMATION_CODE_INPUT',
    CONFIRM_A_CODE_BUTTON: 'CONFIRM A CODE BUTTON',
    RESEND_CODE_BUTTON: 'RESEND_CODE_BUTTON',
    EMAIL_INPUT: 'EMAIL_INPUT',
    PHONE_INPUT: 'PHONE_INPUT',
    USERNAME_INPUT: 'USERNAME_INPUT',
    BACK_TO_SIGN_IN_BUTTON: 'BACK_TO_SIGN_IN_BUTTON',
    FORGOT_PASSWORD_BUTTON: 'FORGOT_PASSWORD_BUTTON',
    FORGOT_PASSWORD_TEXT: 'FORGOT_PASSWORD_TEXT',
    SIGN_IN_BUTTON: 'SIGN_IN_BUTTON',
    SIGN_UP_BUTTON: 'SIGN_UP_BUTTON',
    SUBMIT_BUTTON: 'SUBMIT_BUTTON',
  },
  WELCOME: {
    CONTENT: 'WELCOME_CONTENT',
    BUTTON: 'WELCOME_BUTTON',
  },
  STORYBOOK: {
    CONTENT: 'S_CONTENT',
  },
  NAV: {
    TABS: {
      FEED: 'FEED_TAB',
      LOGIN: 'LOGIN_TAB',
      STORYBOOK: 'STORYBOOK_TAB',
    },
  },
  THINGS: {
    EDIT: {
      BUTTON: 'EDIT_BUTTON',
      TITLE: 'EDIT_TITLE',
      DESCRIPTION: 'EDIT_DESCRIPTION',
    },
    CONTAINER: 'THING_CONTAINER',
    FEED: {
      BUTTON: 'FEED_BUTTON',
    },
    DETAILS: {
      BUTTON: 'DETAILS_BUTTON',
    },
    DELETE: {
      BUTTON: 'DELETE_BUTTON',
    },
    BUTTON: 'THING_SCREEN_EDIT_BUTTON',
  },
  DRAWER: {
    OPEN: 'OPEN_DRAWER',
  },
};
